게시글 UI 완성(2020.09.16)

--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -24,6 +24,9 @@
 .post__lists__item{
 	width: calc( 100% - 20px );
 	height: 90px;
+	display: flex;
+	justify-content: flex-start;
+	align-items : center;
 	background-color: white;
 	padding: 10px;
 	margin-bottom: 10px;
@@ -35,40 +38,62 @@
 	background-color: lightgray;
 }
 .post_preview{
+	position: relative;
 	max-height: 80px;
+
 }
-/*
-.post__lists__item h4{
-	width: 65%;
+.post_component{
+	position: relative;
+	margin-left: 10px;
+	width: calc( 100% - 100px );
+	height: 80px;
+	display: inline-flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: flex-start;
+
+}
+.post_subject {
+	width: 90%;
+	font-size: 1.2em;
+	font-weight: 700;
+}
+.post_content {
+	width: 90%;
+	font-size: 1.1em;
+	font-weight: 400;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
+} 
+.post_others{
+	display: flex;
+	align-items: : center;
+	align-self: flex-end;
+}
+.post_profileImg{
+	max-height: 20px;
+	border-radius: 50%;
+}
+.post_nickname{
+	margin-left: 5px;
+	font-weight: 600;
 
 }
-.post__lists__item hr{
-	margin-top: 5px;
-	margin-bottom: 5px;
-	width: 65%;
+.post_date{
+	margin-left: 10px;
 }
-.post__lists__item p{
+.post_like{
+	margin-left: 10px;
+	margin-right: 5px;
+	font-weight: 550;
+}
+.post_comment{
+	margin-left: 10px;
+	margin-right: 5px; 
+	font-weight: 550;
 
-	font-color: gray;
-	font-size: 13px;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-
 }
-.post__lists__item ul{
-	text-align: right;
-	list-style :none;
-}
-.post__lists__item li{
-	display: inline;
-	font-color: gray;
-	font-size: 13px;
-	margin-right: 10px;
-}*/
 
 
 
@@ -119,6 +144,7 @@
 	border: 0px;
 	font-size: 15px;
 	outline: none;
+
 
 }
 .input__buttons{
@@ -222,7 +248,7 @@
 	background-color: transparent;
 }
 .infoTop_buttons input:hover{
-	font-weight: 600;
+	font-weight: 700;
 	cursor: pointer;
 }
 
@@ -233,17 +259,21 @@
 	display: flex;
 	align-items: left;
 }
+.infoTop_sub img{
+	max-height: 20px;
+	border-radius: 50%;
+	margin-right: 5px;
+}
 .infoSub_nickname{
 	font-size: 13px;
-	font-weight : 500;
-	line-height: 1.6;
+	font-weight : 700;
+
 
 }
 .infoSub_date{
 	margin-left: 10px;
 	font-size: 13px;
 	font-weight : 400;
-	line-height: 1.6;
 	color: gray;
 }
 .info_article{
@@ -251,11 +281,11 @@
 	min-height: 100px;
 	margin-top: 15px;
 
-
 }
 .info_article p{
 	font-size: 1em;
 	line-height: 1.6;
+	white-space: pre-line;
 }
 .info_writer{
 	position: relative;
@@ -271,15 +301,13 @@
 	top : -45px;
 	left:  15px;
 	font-size: 1.5em;
-	font-weight : 500;
-	line-height: 1.6;	
+	font-weight : 500;	
 }
 .infoWriter_email{
 	position: relative;
 	top: -20px;
 	left : -40px;
 	font-size: 1em;
-	line-height: 1.6;
 
 }
 .info_buttons{
@@ -314,7 +342,6 @@
 	margin-bottom:10px;
 	font-size: 1.3em;
 	font-weight : 500;
-	line-height: 5px;	
 }
 .comment_input {
 	display: flex;
@@ -393,7 +420,6 @@
 	margin-left: 5px;
 	font-size: 1em;
 	font-weight : 600;
-	line-height: 1.6;
 }
 .comment_date{
 	position: relative;
@@ -401,7 +427,6 @@
 	margin-left: 5px;
 	font-size: 1em;
 	font-weight : 400;
-	line-height: 1.6;
 	color: gray;
 
 }
