--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -65,8 +65,9 @@
 
     </div>
 
+    <!-- 카테고리 목록 -->
     <div class="sub_title2">
-        대분류
+        카테고리
     </div>
 
     <div class="b_container aos-animate aos-init" data-aos="zoom-in" data-aos-duration="1000">
@@ -76,61 +77,8 @@
         <div class="b_btn_right b_btn">
             <img src="../static/img/arrow-right.png" alt="" class="b_btn_img">
         </div>
-        <div class="big_room_container">
-            <div class="big_room active">
-                <div class="big_room_name">
-                    게임
-                </div>
+        <div class="category_container">
 
-                <div class="small_room_container"></div>
-
-                <div class="small_room_page" id="pagination"></div>
-            </div>
-            <div class="big_room">
-                <div class="big_room_name">
-                    스포츠
-                </div>
-
-                <div class="small_room_container"></div>
-
-                <div class="small_room_page" id="pagination"></div>
-            </div>
-            <div class="big_room">
-                <div class="big_room_name">
-                    연예 / 방송
-                </div>
-
-                <div class="small_room_container"></div>
-
-                <div class="small_room_page" id="pagination"></div>
-            </div>
-            <div class="big_room">
-                <div class="big_room_name">
-                    IT / 교육
-                </div>
-
-                <div class="small_room_container"></div>
-
-                <div class="small_room_page" id="pagination"></div>
-            </div>
-            <div class="big_room">
-                <div class="big_room_name">
-                    여행 / 음식
-                </div>
-
-                <div class="small_room_container"></div>
-
-                <div class="small_room_page" id="pagination"></div>
-            </div>
-            <div class="big_room">
-                <div class="big_room_name">
-                    취미 / 생활
-                </div>
-
-                <div class="small_room_container"></div>
-
-                <div class="small_room_page" id="pagination"></div>
-            </div>
         </div>
     </div>
 
