--- a/TeamProject/static/css/main.css
+++ b/TeamProject/static/css/main.css
@@ -480,7 +480,7 @@ a:link, a:visited, a:active {
 
 .s_btn:hover {
 	opacity: 0.8;
-	background: white;
+	background: var(--color_ivory);
 	border-radius: 50%;
 }
 
@@ -527,19 +527,19 @@ a:link, a:visited, a:active {
 	background: var(--color_ivory);
 }
 
-.big_room_container{
+.category_container{
 	display: flex;
 	justify-content: center;
 }
 
-.big_room {
+.category {
 	background: var(--color_dark);
 	color: white;
 	font-weight: bold;
 
 	padding: 5vh 10vh 10vh;
 	width: 70vw;
-	min-height: 70vh;
+	min-height: 60vh;
 	border-radius: 10px;
 	margin-bottom: 10vh;
 	text-align: center;
@@ -554,7 +554,6 @@ a:link, a:visited, a:active {
 	display: flex;
 	align-items: center;
 	z-index: 2;
-	/* top:30vh; */
 	opacity: 0.1;
 	transition: .25s ease;
 }
@@ -581,14 +580,14 @@ a:link, a:visited, a:active {
 	border-radius: 50%;
 }
 
-.big_room_name{
+.category_name{
 	font-size: 2rem;
 	font-weight: bold;
 	margin-bottom: 5%;
 	color: var(--color_yellow);
 }
 
-.small_room_container{
+.board_container{
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(45%, auto));
 	gap: 20px;
@@ -597,7 +596,7 @@ a:link, a:visited, a:active {
 	transition: .5s all;
 }
 
-.small_room:hover{
+.board:hover{
 	color:var(--color_yellow);
 	cursor: pointer;
 }
@@ -608,7 +607,7 @@ a:link, a:visited, a:active {
 }
 
 
-.small_room_page{
+.board_page_container{
 	bottom: 1.5rem;
 	position: absolute;
     left: 37.5vw;
