--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -74,7 +74,6 @@
         <div>
             <span class="sub_title">신고 목록 - </span>
             <select class="category_menu">
-                <option value="0" selected>Select :)</option>
                 <option value="1">게시글</option>
                 <option value="2">댓글</option>
                 <option value="3">유저?</option>
@@ -88,8 +87,9 @@
                 <span class="r_item">신고 날짜</span>
                 <span class="r_item">게시글 제목</span>
                 <span class="r_item">신고 사유</span>
-                <span class="r_item">수정</span>
-                <span class="r_item">삭제</span>
+                <span class="r_item">회원 정지</span>
+                <span class="r_item">게시글 삭제</span>
+                <span class="r_item">처리</span>
             </div>
             <div class="line2"></div>
             <div class="reports">
@@ -98,40 +98,45 @@
                     <span class="r_item">ㅇ</span>
                     <span class="r_item">ㅇ</span>
                     <span class="r_item">ㅇ</span>
-                    <button class="report_btn r_item">수정</button>
+                    <button class="report_btn r_item">회원 정지</button>
                     <button class="report_btn r_item">삭제</button>
+                    <button class="report_btn r_item">X</button>
                 </div>
                 <div class="report">
                     <input type="checkbox" class="r_item">
                     <span class="r_item">2020/09/14</span>
                     <span class="r_item">아ㅋㅋ 진짜 코딩 너무재밌네</span>
                     <span class="r_item">홍보 및 낚시성 게시글</span>
-                    <button class="report_btn r_item">수정</button>
+                    <button class="report_btn r_item">회원 정지</button>
                     <button class="report_btn r_item">삭제</button>
+                    <button class="report_btn r_item">X</button>
                 </div>
                 <div class="report">
                     <input type="checkbox" class="r_item">
                     <span class="r_item">2020/09/14</span>
                     <span class="r_item">아ㅋㅋ 진짜 코딩 너무재밌네</span>
                     <span class="r_item">홍보 및 낚시성 게시글</span>
-                    <button class="report_btn r_item">수정</button>
+                    <button class="report_btn r_item">회원 정지</button>
                     <button class="report_btn r_item">삭제</button>
+                    <button class="report_btn r_item">X</button>
                 </div>
                 <div class="report">
                     <input type="checkbox" class="r_item">
                     <span class="r_item">2020/09/14</span>
                     <span class="r_item">아ㅋㅋ 진짜 코딩 너무재밌네</span>
                     <span class="r_item">홍보 및 낚시성 게시글</span>
-                    <button class="report_btn r_item">수정</button>
+                    <button class="report_btn r_item">회원 정지</button>
                     <button class="report_btn r_item">삭제</button>
+                    <button class="report_btn r_item">X</button>
                 </div>
                 <div class="report">
                     <input type="checkbox" class="r_item">
                     <span class="r_item">2020/09/14</span>
                     <span class="r_item">아ㅋㅋ 진짜 코딩 너무재밌네</span>
                     <span class="r_item">홍보 및 낚시성 게시글</span>
-                    <button class="report_btn r_item">수정</button>
+                    <button class="report_btn r_item">회원 정지</button>
                     <button class="report_btn r_item">삭제</button>
+                    <button class="report_btn r_item">X</button>
                 </div>
             </div>
         </div>
@@ -142,12 +147,9 @@
         <div>
             <span class="sub_title">회원 관리 - </span>
             <select class="user_search_option">
-                <option value="0" selected>Select :)</option>
-                <option value="1">회원 이름</option>
-                <option value="2">회원 닉네임</option>
-                <option value="3">회원 아이디</option>
+                <option value="1">회원 닉네임</option>
             </select>
-            <input type="text" class="user_search_input">
+            <input type="text" class="user_search_input" placeholder="닉네임 검색">
             <button class="user_search_btn plus_btn">검색</button>
         </div>
 
@@ -158,6 +160,7 @@
                 <span class="r_item">닉네임</span>
                 <span class="r_item">이메일</span>
                 <span class="r_item">생년월일</span>
+                <span class="r_item">회원 수정</span>             
                 <span class="r_item">회원 삭제</span>
             </div>
             <div class="line2"></div>
@@ -168,6 +171,7 @@
                     <span class="r_item">케빈</span>  
                     <span class="r_item">gg0113@naver.com</span>
                     <span class="r_item">1997-01-01</span>
+                    <button class="report_btn r_item">정보 수정</button>
                     <button class="report_btn r_item">회원 삭제</button>
                 </div>
                 <div class="user">
@@ -176,6 +180,7 @@
                     <span class="r_item">케빈</span>  
                     <span class="r_item">gg0113@naver.com</span>
                     <span class="r_item">1997-01-01</span>
+                    <button class="report_btn r_item">정보 수정</button>
                     <button class="report_btn r_item">회원 삭제</button>
                 </div>
                 <div class="user">
@@ -184,6 +189,7 @@
                     <span class="r_item">케빈</span>  
                     <span class="r_item">gg0113@naver.com</span>
                     <span class="r_item">1997-01-01</span>
+                    <button class="report_btn r_item">정보 수정</button>
                     <button class="report_btn r_item">회원 삭제</button>
                 </div>
                 <div class="user">
@@ -192,6 +198,7 @@
                     <span class="r_item">케빈</span>  
                     <span class="r_item">gg0113@naver.com</span>
                     <span class="r_item">1997-01-01</span>
+                    <button class="report_btn r_item">정보 수정</button>
                     <button class="report_btn r_item">회원 삭제</button>
                 </div>
                 <div class="user">
@@ -200,6 +207,7 @@
                     <span class="r_item">케빈</span>  
                     <span class="r_item">gg0113@naver.com</span>
                     <span class="r_item">1997-01-01</span>
+                    <button class="report_btn r_item">정보 수정</button>
                     <button class="report_btn r_item">회원 삭제</button>
                 </div>
             </div>
