수정삭제 랜더링 수정  ,댓글 입력 기능 (2020.09.22)
-

--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<div class="nav_logo">
-			<a href="/rooms">
+			<a href="http://127.0.0.1:5000/">
 				<img src="https://img.icons8.com/ios/50/000000/room.png"/>
 			</a>
 			<p>ROOMS</p>
