--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -37,7 +37,9 @@
 			<div class="side_one"></div>
 			<div class="side_two"></div>
 		</section>
+
 	</div>
+	<div class="footer"></div>
 
 
 	<script src="https://kit.fontawesome.com/8625eebbbc.js" crossorigin="anonymous"></script>
