--- a/TeamProject/static/css/style.css
+++ b/TeamProject/static/css/style.css
@@ -19,7 +19,7 @@ body{
 .post_main{
 	position: relative;
 	width: 1080px;
-	height: 100%;
+/*	height: 100%;*/
 	padding-top: 70px;
 }
 header{
@@ -111,7 +111,12 @@ header{
 	background-color: white;
 
 }
-
+.footer{
+	position: relative;
+	width: 100%;
+	height: 30px;
+	background-color: transparent;
+}
 @media screen and (max-width: 1080px) {
 	.side{
 /*		visibility: hidden;
