--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -1,7 +1,7 @@
 
 .post{
 	position: relative;
-	display:flex;
+	display:inline-flex;
 	flex-direction:column;
 	align-items: center;
 	background: transparent;
