--- a/TeamProject/static/css/manager.css
+++ b/TeamProject/static/css/manager.css
@@ -180,28 +180,35 @@ a:active {text-decoration: none;}
 
 
 /* -------------- board container ------------- */
-.board_menu{
-    display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(18%, auto));
-	gap: 20px;
-	z-index: 1;
-	transition-duration: .5s;
-    transition: .5s all;
+.board_box{
     background: var(--color_ivory);
+    border: solid 2px var(--color_dark);
+    border-radius: 4px;
+    font-weight: bold;
+    width: 90vw;
     padding: 20px;
     margin-top: 2vw;
-    border-radius: 4px;
-    border: solid 2px var(--color_dark);
+	margin-bottom: 10vh;
+	text-align: center;
+	position: absolute;
+    transition: .5s all;
+    transition-duration: .5s;
+}
+
+.board_menu{
+    display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(20%, auto));
+	gap: 20px;
+	z-index: 1;   
 }
 
 .board_del_btn{
-    right: 20px;
-    border-radius: 50%;
+    border-radius: 8px;
     font-weight: bold;
     padding: 5px;
     width: 30px;
     height: 30px;
-    margin-left: 50px;
+    margin-left: 30px;
     cursor: pointer;
     background: var(--color_dark);
     color: var(--color_ivory);
@@ -214,6 +221,10 @@ a:active {text-decoration: none;}
     color: var(--color_dark);
 }
 
+
+.board_page{
+    margin-top: 5vh;
+}
 
 .pages{
 	margin-right: 1rem;
