카테고리/관리자 페이지 API 완료 (20.09.23)
API 중복 실행 문제 해결

--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -43,7 +43,7 @@
 
         <div class="category_container">
             <span class="sub_title">카테고리 - </span>
-            <select class="category_menu" onchange="">
+            <select class="category_menu">
                 <option selected>Select :)</option>
             </select>
             
@@ -53,13 +53,7 @@
         <div class="line"></div>
 
         <div class="board_container">
-            <span class="sub_title">게시판 - </span>
-            <button class="category_del_btn plus_btn">해당 카테고리 삭제</button>
-            <button class="board_plus_btn plus_btn">게시판 추가 (+)</button>
-            <div class="board_box">
-                <div class="board_menu"></div>
-                <div class="board_page" id="pagination"></div>
-            </div>
+            
         </div>
 
         <div id="category_modal_container"></div>
