--- a/TeamProject/static/css/manager.css
+++ b/TeamProject/static/css/manager.css
@@ -128,6 +128,16 @@ a:active {text-decoration: none;}
 }
 .plus_btn:hover, .plus_btn:focus{
     background: var(--color_yellow);
+    cursor: pointer;
+}
+.plus_btn:disabled{
+    color: gray;
+}
+.plus_btn:disabled:hover{
+    background: var(--color_ivory);
+}
+.category_del_btn:hover, .category_del_btn:focus{
+    background: rgb(241, 107, 107);
 }
 
 /* 카테고리 추가 모달 */
@@ -177,7 +187,6 @@ a:active {text-decoration: none;}
 	font-weight: 600;
 	color: #a29bfe;
 }
-
 
 /* -------------- board container ------------- */
 .board_box{
@@ -242,6 +251,9 @@ a:active {text-decoration: none;}
 	color: grey;
 	cursor: pointer;
 }
+
+
+
 
 /* -------------------------- Report Management Part (신고 리스트 관리) ---------------------------- */
 .report_management_container {
