--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -3,6 +3,7 @@
 	position: relative;
 	display:inline-flex;
 	flex-direction:column;
+	justify-content: flex-start;
 	align-items: center;
 	background: transparent;
 	width: 70%;
@@ -16,7 +17,7 @@
 	flex-direction:column;
 	align-items: center;
 	margin-top: 10px;
-	width: 90%;
+	width: 100%;
 	height:100%;
 	list-style:none;
 }
@@ -64,7 +65,7 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
-} 
+}
 .post_others{
 	display: flex;
 	align-items: : center;
@@ -89,7 +90,7 @@
 }
 .post_comment{
 	margin-left: 10px;
-	margin-right: 5px; 
+	margin-right: 5px;
 	font-weight: 550;
 
 }
@@ -98,7 +99,7 @@
 
 /*===========input==============*/
 .post_input{
-	width: 90%;
+	width: 100%;
 
 }
 .input__off{
@@ -195,7 +196,7 @@
 	font-size: 1em;
 	color:white;
 	background-color: #8a0a8a;
-	border-radius: 5px;	
+	border-radius: 5px;
 	padding: 2px;
 	cursor: pointer;
 }
@@ -310,7 +311,7 @@
 	top : -45px;
 	left:  15px;
 	font-size: 1.5em;
-	font-weight : 500;	
+	font-weight : 500;
 }
 .infoWriter_email{
 	position: relative;
@@ -483,10 +484,6 @@
 	}
 	.post_main{
 		width: 90%
-	}
-	.post_title{
-		left: 5%;
-		width: 90%;
 	}
 
 }
