--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -34,13 +34,20 @@
 			</section>
 
 			<section class="side">
-				<div class="side_search">게시판별 검색창</div>
-				<div class="sied_best"> </div>
-				<div class="side_add" id="add_1"> </div>
-				<span class="side_goTo">
-					<i class="fas fa-arrow-alt-circle-right"></i>
-				</span>
-
+				<div class="side_search">
+					<fieldset>
+						<input type="search" />
+						<button type="submit">
+							<i class="fa fa-search"></i>
+						</button>
+					</fieldset>
+				</div>
+				<div class="side_best"></div>
+				<div class="side_ads" id="adSide_1">
+					<input type="button" id="adButton_1" value="X">
+					<img src="https://image.dongascience.com/Photo/2020/03/5bddba7b6574b95d37b6079c199d7101.jpg">
+				</div>
+				<div class="side_goTop">TOP</div>
 			</section>
 		</div>
 	</div>
