--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -42,25 +42,34 @@
 						</button>
 					</fieldset>
 				</div>
-				<div class="side_best"></div>
-				<div class="side_ads" id="adSide_1">
-					<input type="button" id="adButton_1" value="X">
-					<img src="https://image.dongascience.com/Photo/2020/03/5bddba7b6574b95d37b6079c199d7101.jpg">
+				<div class="side_best">
+					<h3>Best</h3>
+					<div class="side_bestContentsList"></div>
 				</div>
-				<div class="side_goTop">TOP</div>
-			</section>
+				<div class="side_adWrap">
+					<input type="button" id="adButton_1" value="X">
+					<img src="https://www.book21.com/data/book/FILE147727631769.jpg">
+				</div>
+				<div class="side_adWrap">
+					<input type="button" id="adButton_2" value="X">
+					<img src="https://i.pinimg.com/originals/42/7b/5f/427b5f6ed9161578e73bf6b5e43fd2e2.jpg">
+				</div>
+
+
+				</section>
+			</div>
 		</div>
-	</div>
-	<div class="footer"></div>
+		<div class="post_goTop">TOP</div>
+		<div class="footer"></div>
 
 
-	<script src="https://kit.fontawesome.com/8625eebbbc.js" crossorigin="anonymous"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="{{ url_for('static', filename='js/post/main.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/post/fetch.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/post/render_tool.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/post/render.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/post/router.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/post/event.js') }}"></script>
-</body>
-</html>
+		<script src="https://kit.fontawesome.com/8625eebbbc.js" crossorigin="anonymous"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="{{ url_for('static', filename='js/post/main.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/post/fetch.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/post/render_tool.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/post/render.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/post/router.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/post/event.js') }}"></script>
+	</body>
+	</html>
