--- a/TeamProject/static/css/style.css
+++ b/TeamProject/static/css/style.css
@@ -76,22 +76,82 @@ header{
 	font-size: 2em;
 }
 .search_bar{
-	width: 50%;
+	position: relative;
+	display: flex;
+	align-items: center;
+	width: 60%;
 	height: 100%;
 }
-.search_bar input{
-	width: 100%;
-	height: 50%;
-	margin-top:15px;
-	border-radius: 20px;
+#search_total{
+	position: relative;
+	display: inline;
+	width: 60px;
+	border-style: none;
+}
+.search_bar fieldset {
+  position: relative;
+  display: inline-block;
+  padding: 0 0 0 40px;
+  background: white;
+  border: none;
+  border-radius: 5px;
 }
 
+.search_bar  input,
+button {
+  position: relative;
+  width: 420px;
+  height: 50px;
+  padding: 0;
+  display: inline-block;
+  float: left;
+}
+
+.search_bar input {
+  color: #666;
+  z-index: 2;
+  border-style: none;
+  border-bottom : 1px solid;
+}
+.search_bar input:focus {
+  outline: 0 none;
+}
+.search_bar input:focus + button {
+    transform: translate(0, 0);
+    transition-duration: 0.3s;
+}
+.search_bar input:focus + button .fa {
+    transform: translate(0px, 0);
+    transition-duration: 0.3s;
+  color: #fff;
+}
+
+.search_bar button {
+  z-index: 1;
+  width: 50px;
+  border: 0 none;
+  background: #ceb980;
+  cursor: pointer;
+  border-radius: 0 5px 5px 0;
+  transform: translate(-50px, 0);
+  transition-duration: 0.3s;
+}
+
+.fa-search {
+  font-size: 1.4rem;
+  color: #29abe2;
+  z-index: 3;
+  top: 25%;
+         transform: translate(-400px, 0);
+         transition-duration: 0.3s;
+          transition: all 0.1s ease-in-out;
+}
 .user_profile{
  	margin-top: 10px;
 }
 .side{
 	position: relative;
-	width: 300px;
+	width: 360px;
 	margin-top: 20px;
 	display: inline-flex;
 	flex-direction: column;
@@ -100,13 +160,7 @@ header{
 
 }
 
-.side_search{
-	position: relative;
-	width: 100%;
-	height: 50px;
-	border-radius: 5px;
 
-}
 .side_best{
 	position: relative;
 	width: 100%;
@@ -204,7 +258,22 @@ header{
 	overflow: hidden;
 
 }
-
+.side_search{
+	position: relative;
+	width: 100%;
+	height: 50px;
+	border-radius: 5px;
+	background-color: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+#search_board{
+	position: relative;
+	display: inline;
+	width: 60px;
+	border-style: none;
+}
 .side_search fieldset {
   position: relative;
   display: inline-block;
