--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -17,7 +17,18 @@
 			<p>ROOMS</p>
 		</div>
 		<div class="search_bar">
-			<input type="textarea" placeholder="Search">
+			<select name="search_total" id="search_total">
+						<option value="전체">전체</option>
+						<option value="제목">제목</option>
+						<option value="내용">내용</option>
+						<option value="글쓴이">글쓴이</option>
+					</select>
+					<fieldset>
+						<input type="search" placeholder="검색내용을 입력하세요" />
+						<button type="submit">
+							<i class="fa fa-search"></i>
+						</button>
+					</fieldset>
 		</div>
 		<div class="user_profile">
 			<a href="">
@@ -35,8 +46,14 @@
 
 			<section class="side">
 				<div class="side_search">
+					<select name="search_board" id="search_board">
+						<option value="전체">전체</option>
+						<option value="제목">제목</option>
+						<option value="내용">내용</option>
+						<option value="글쓴이">글쓴이</option>
+					</select>
 					<fieldset>
-						<input type="search" />
+						<input type="search" placeholder="검색내용을 입력하세요" />
 						<button type="submit">
 							<i class="fa fa-search"></i>
 						</button>
@@ -56,20 +73,20 @@
 				</div>
 
 
-				</section>
-			</div>
+			</section>
 		</div>
-		<div class="post_goTop">TOP</div>
-		<div class="footer"></div>
+	</div>
+	<div class="post_goTop">TOP</div>
+	<div class="footer"></div>
 
 
-		<script src="https://kit.fontawesome.com/8625eebbbc.js" crossorigin="anonymous"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script src="{{ url_for('static', filename='js/post/main.js') }}"></script>
-		<script src="{{ url_for('static', filename='js/post/fetch.js') }}"></script>
-		<script src="{{ url_for('static', filename='js/post/render_tool.js') }}"></script>
-		<script src="{{ url_for('static', filename='js/post/render.js') }}"></script>
-		<script src="{{ url_for('static', filename='js/post/router.js') }}"></script>
-		<script src="{{ url_for('static', filename='js/post/event.js') }}"></script>
-	</body>
-	</html>
+	<script src="https://kit.fontawesome.com/8625eebbbc.js" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="{{ url_for('static', filename='js/post/main.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/post/fetch.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/post/render_tool.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/post/render.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/post/router.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/post/event.js') }}"></script>
+</body>
+</html>
